# sgf

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
CMake/: FindGLFW3.cmake
audio/: CMakeLists.txt  audio.cpp  audio.h  dr_wav.h
audio/libopenal/: build.sh
audio/libopenal/windows_x64/lib/: OpenAL32.lib
core/: CMakeLists.txt  any.h  appevent.cpp  appevent.h  bitmask.h  core.cpp  core.hh  debug.cpp  debug.h  error.cpp  error.h  fileio.cpp  fileio.h  function.h  jsutils.js  object.cpp  object.h  podvector.cpp  podvector.h  promise.cpp  promise.h  property.cpp  property.h  random.cpp  random.h  shared.cpp  shared.h  sharedptr.h  signal.h  signal_impl.inl  std.cpp  std.h  weakptr.cpp  weakptr.h
core/tests/: CMakeLists.txt  coretests.cpp  promisetest.cpp  signal.cpp
core3d/: CMakeLists.txt  core3d.cpp  core3d.hh  glgraphicsdevice.cpp  glgraphicsdevice.h  gltypes.cpp  gltypes.h  graphicsdevice.cpp  graphicsdevice.h  types.cpp  types.h
core3d/tests/: hellotriangle.cpp
corexr/: CMakeLists.txt  openxrsystem.cpp  openxrsystem.h  webxrsystem.cpp  webxrsystem.h  xrsystem.cpp  xrsystem.h
corexr/tests/: hellotrianglexr.cpp
docs/: PullRequests.md
embuild/: buildall.sh  index_template.html  rebuildall.sh
emgdb/: CMakeLists.txt  emgdb.cpp
fetch/: CMakeLists.txt  fetch.cpp  fetch.h  fetch.hh  fetch_emscripten.cpp  fetch_libcurl.cpp  fetch_libcurl.h
fetch/libcurl/: build.sh
fetch/libcurl/windows_x64/release/: libcurl.lib  zlibstatic.lib
fetch/tests/: fetchtest.cpp
geom/: CMakeLists.txt  affinemat4.cpp  affinemat4.h  box.cpp  box.h  geom.cpp  geom.hh  line.h  mat3.h  mat4.h  plane.h  quat.h  rect.h  util.h  vec2.h  vec3.h  vec4.h
geom/tests/: CMakeLists.txt  geomtests.cpp
glfw/: CMakeLists.txt  glfw.cpp  glfw.hh  native.h
glfw/libglfw/: build.sh
glfw/libglfw/windows_x64/: build.sh
glfw/libglfw/windows_x64/lib/: glfw3.lib
gltf/: CMakeLists.txt  gltf.cpp  gltf.h  gltf.hh
gltf/tests/: CMakeLists.txt  saucertest.cpp
gltf/tests/assets/: saucer.glb
glwindow/: CMakeLists.txt  gamepad.h  gamepadremapper.cpp  gamepadremapper.h  glwindow.cpp  glwindow.h  glwindow.hh  imguiex.cpp  imguiex.h  keyboard.cpp  keyboard.h  mouse.cpp  uidevice.cpp  uidevice.h
glwindow/tests/: helloworld.cpp
help/: PullRequests.md
image/: CMakeLists.txt  image.cpp  image.h  image.hh  imageloader.cpp  imageloader.h  imageutils.cpp  imageutils.h  imguiex.cpp  imguiex.h
imgui/: CMakeLists.txt  imgui.cpp  imgui.hh  imguiex.cpp  imguiex.h  imguilog.cpp  imguilog.h
imgui/libimgui/: build.sh
imgui/libimgui/ImGui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
imgui/libimgui/ImGui/backends/: imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_opengl3.cpp  imgui_impl_osx.h  imgui_impl_osx.mm  imgui_impl_sdl.cpp  imgui_impl_win32.cpp
opengl/: CMakeLists.txt  opengl.cpp  opengl.hh
opengl/libangle/windows_x64/lib/: libGLESv2.dll.lib
openxr/: CMakeLists.txt  openxr.hh  openxrcamera.cpp  openxrcamera.h  openxrsession.cpp  openxrsession.h
openxr/libopenxr/: build.sh
openxr/libopenxr/include/: CMakeLists.txt
openxr/libopenxr/include/openxr/: CMakeLists.txt  openxr.h  openxr_platform.h  openxr_reflection.h
openxr/libopenxr/windows_x64/lib/: openxr_loader.lib
openxr/tests/: createsession.cpp  helloboxvr.cpp
orkland/: CMakeLists.txt  airplane.cpp  airplane.h  level.cpp  level.h  orkland.cpp  orkland.h  texturestreamer.cpp  texturestreamer.h
orkland/assets/: levels.json
scene/: CMakeLists.txt  actor.cpp  actor.h  actortype.cpp  actortype.h  camera.cpp  camera.h  collider.cpp  collider.h  collisionspace.cpp  collisionspace.h  contact.h  debugrenderer.cpp  debugrenderer.h  entity.cpp  entity.h  envrenderer.cpp  envrenderer.h  imgui.ini  intersect.cpp  intersect.h  light.cpp  light.h  linearspace.cpp  linearspace.h  material.cpp  material.h  mesh.h  meshbuilder.cpp  meshbuilder.h  meshcollider.cpp  meshcollider.h  meshcolliderdata.cpp  meshcolliderdata.h  meshprimitives.cpp  meshprimitives.h  meshutils.cpp  meshutils.h  model.cpp  model.h  (+44 more)
scene/assets/shaders/: camera.glsl  cameraparams.h  env.glsl  envparams.h  envrenderer.glsl  fbcopy.glsl  light.glsl  lightparams.h  material.glsl  materialparams.h  modelrenderer.glsl  scene.glsl  sceneparams.h  terrain.glsl  terrainparams.h  terrainrenderer.glsl
scene/shaders/: camera.glsl  cameraparams.h  debugrenderer.glsl  lightparams.h  materialparams.h  scene.glsl  sceneparams.h  std.glsl
scene/tests/: CMakeLists.txt  hellobox.cpp  rigidbodytest.cpp
stb/: CMakeLists.txt  stb.cpp  stb.hh
stb/libstb/: build.sh
websockets/: CMakeLists.txt  websockets.h  websockets.hh  websockets_desktop.cpp  websockets_emscripten.cpp  websockets_emscripten.js
websockets/libixwebsocket/: build.sh
websockets/libixwebsocket/windows_x64/: ixwebsocket.lib
websockets/tests/: websocketstest.cpp
webxr/: CMakeLists.txt  openxrsystem.cpp  openxrsystem.h  webxr.hh  webxrsystem.cpp  webxrsystem.h  xrsystem.cpp  xrsystem.h
webxr/tests/: hellotrianglexr.cpp
window/: CMakeLists.txt  gamepad.cpp  gamepad.h  gamepadmapping.cpp  gamepadmapping.h  gamepadmappings.inc  glwindow.cpp  glwindow.h  keyboard.h  keycodes.h  mouse.h  uidevice.h  window.cpp  window.h  window.hh
window/tests/: helloworld.cpp
xrscene/: CMakeLists.txt  xrcamera.cpp  xrcamera.h  xrscene.hh
xrscene/tests/: helloboxxr.cpp
