cmake_minimum_required(VERSION 3.8)

##### scene module #####

project(scene)

add_library(scene
        actor.cpp
        actor.h
        actortype.cpp
        actortype.h
        camera.cpp
        camera.h
        collider.cpp
        collider.h
        collisionspace.cpp
        collisionspace.h
        contact.cpp
        contact.h
        debugrenderer.cpp
        debugrenderer.h
        entity.cpp
        entity.h
        envrenderer.cpp
        envrenderer.h
        intersect.cpp
        intersect.h
        light.cpp
        light.h
        linearspace.cpp
        linearspace.h
        material.cpp
        material.h
        mesh.cpp
        mesh.h
        meshbuilder.cpp
        meshbuilder.h
        meshcollider.cpp
        meshcollider.h
        meshcolliderdata.cpp
        meshcolliderdata.h
        meshutils.cpp
        meshutils.h
        model.cpp
        model.h
        modelrenderdata.cpp
        modelrenderdata.h
        modelrenderer.cpp
        modelrenderer.h
        orthographiccamera.cpp
        orthographiccamera.h
        physicsmaterial.cpp
        physicsmaterial.h
        planecollider.cpp
        planecollider.h
        primitives.cpp
        primitives.h
        perspectivecamera.cpp
        perspectivecamera.h
        rendercontext.cpp
        rendercontext.h
        renderer.cpp
        renderer.h
        renderparams.cpp
        renderparams.h
        renderpass.cpp
        renderpass.h
        rigidbody.cpp
        rigidbody.h
        scene.cpp
        scene.h
        scene.hh
        shaderasset.cpp
        shaderasset.h
        spherecollider.cpp
        spherecollider.h
        terraindata.cpp
        terraindata.h
        terrainrenderer.cpp
        terrainrenderer.h
        textureasset.cpp
        textureasset.h
        textureloader.cpp
        textureloader.h
        assets/shaders/cameraparams.h
        assets/shaders/envparams.h
        assets/shaders/lightparams.h
        assets/shaders/materialparams.h
        assets/shaders/sceneparams.h
        assets/shaders/terrainparams.h
        )

target_link_libraries(scene imgui core3d)

add_subdirectory(tests)
